--- a/app/src/main/res/layout/item_find_book.xml
+++ b/app/src/main/res/layout/item_find_book.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
+    android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
@@ -51,6 +52,7 @@
         android:id="@+id/rotate_loading"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:loading_width="2dp" />
 
 </LinearLayout>
