--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,7 +25,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_search_list"
+            android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
