--- a/app/src/main/res/layout/activity_explore_show.xml
+++ b/app/src/main/res/layout/activity_explore_show.xml
@@ -10,10 +10,9 @@
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:contentLayout="@layout/view_search"
         app:contentInsetStartWithNavigation="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="搜索" />
+        app:title="@string/find" />
 
     <io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout
         android:id="@+id/content_view"
