--- a/app/src/main/res/layout/item_text.xml
+++ b/app/src/main/res/layout/item_text.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text_view"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="3dp">
-
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_card_view"
-        android:clickable="true"
-        android:ellipsize="end"
-        android:focusable="true"
-        android:gravity="center"
-        android:padding="5dp"
-        android:singleLine="true"
-        android:textColor="@color/tv_text_default"
-        android:textSize="14sp" />
-
-</FrameLayout>
+    android:layout_margin="3dp"
+    android:background="@drawable/shape_card_view"
+    android:clickable="true"
+    android:ellipsize="end"
+    android:focusable="true"
+    android:gravity="center"
+    android:padding="5dp"
+    android:singleLine="true"
+    android:textColor="@color/tv_text_default"
+    android:textSize="14sp" />
