--- a/app/src/main/res/menu/find_book.xml
+++ b/app/src/main/res/menu/find_book.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menu_search"
+        android:title="@string/search"
+        app:showAsAction="always" />
 
 
 </menu>
