--- a/app/src/main/res/layout/item_find_book.xml
+++ b/app/src/main/res/layout/item_find_book.xml
@@ -40,24 +40,32 @@
 
     </LinearLayout>
 
-    <com.google.android.flexbox.FlexboxLayout
-        android:id="@+id/gl_child"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:overScrollMode="never"
-        android:padding="3dp"
-        android:visibility="gone"
-        app:dividerDrawable="@drawable/shape_space_divider"
-        app:flexDirection="row"
-        app:flexWrap="wrap"
-        app:showDivider="middle" />
+        android:layout_gravity="center">
 
-    <io.legado.app.ui.widget.anima.RotateLoading
-        android:id="@+id/rotate_loading"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:visibility="gone"
-        app:loading_width="2dp" />
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/gl_child"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:padding="3dp"
+            android:visibility="gone"
+            app:dividerDrawable="@drawable/shape_space_divider"
+            app:flexDirection="row"
+            app:flexWrap="wrap"
+            app:showDivider="middle" />
+
+        <io.legado.app.ui.widget.anima.RotateLoading
+            android:id="@+id/rotate_loading"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            app:loading_width="2dp" />
+
+    </FrameLayout>
 
 </LinearLayout>
