--- a/app/src/main/res/layout/item_book_source.xml
+++ b/app/src/main/res/layout/item_book_source.xml
@@ -20,34 +20,34 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_edit_source"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_gravity="center"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/edit"
-        android:padding="8dp"
+        android:padding="6dp"
         android:src="@drawable/ic_edit"
         app:tint="@color/tv_text_default" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_top_source"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_gravity="center"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/to_top"
-        android:padding="8dp"
+        android:padding="6dp"
         android:src="@drawable/ic_top_source"
         app:tint="@color/tv_text_default" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_del_source"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_gravity="center"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/delete"
-        android:padding="8dp"
+        android:padding="6dp"
         android:src="@drawable/ic_clear_all"
         app:tint="@color/tv_text_default" />
 
