--- a/app/src/main/res/layout/item_replace_rule.xml
+++ b/app/src/main/res/layout/item_replace_rule.xml
@@ -14,7 +14,7 @@
         android:layout_weight="1"
         tools:ignore="RtlSymmetry" />
 
-    <Switch
+    <io.legado.app.lib.theme.view.ATESwitch
         android:id="@+id/swt_enabled"
         android:name="@string/enable"
         android:layout_width="wrap_content"
@@ -24,10 +24,21 @@
         tools:ignore="RtlSymmetry" />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_edit"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/edit"
+        android:padding="6dp"
+        android:src="@drawable/ic_edit"
+        android:tint="@color/tv_text_default" />
+
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_menu_more"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_margin="6dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:padding="6dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_more_vert"
         android:tint="@color/tv_text_default"
