--- a/app/src/main/res/layout/item_book_source.xml
+++ b/app/src/main/res/layout/item_book_source.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
@@ -18,8 +18,17 @@
         android:text=""
         android:textColor="@color/tv_text_default" />
 
+    <io.legado.app.lib.theme.view.ATESwitch
+        android:id="@+id/swt_enabled"
+        android:name="@string/enable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        tools:ignore="RtlSymmetry" />
+
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_edit_source"
+        android:id="@+id/iv_edit"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_gravity="center"
@@ -27,28 +36,16 @@
         android:contentDescription="@string/edit"
         android:padding="6dp"
         android:src="@drawable/ic_edit"
-        app:tint="@color/tv_text_default" />
+        android:tint="@color/tv_text_default" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_top_source"
+        android:id="@+id/iv_menu_more"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_gravity="center"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@string/to_top"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="6dp"
-        android:src="@drawable/ic_top_source"
-        app:tint="@color/tv_text_default" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_del_source"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_gravity="center"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@string/delete"
-        android:padding="6dp"
-        android:src="@drawable/ic_clear_all"
-        app:tint="@color/tv_text_default" />
+        android:src="@drawable/ic_more_vert"
+        android:tint="@color/tv_text_default"
+        tools:ignore="RtlHardcoded" />
 
 </LinearLayout>
