--- a/app/src/main/res/menu/book_source.xml
+++ b/app/src/main/res/menu/book_source.xml
@@ -4,11 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <item
-        android:id="@+id/menu_select_all"
+        android:id="@+id/menu_select_action"
         android:icon="@drawable/ic_select_all"
-        android:title="@string/select_all"
+        android:title="@string/select_action"
         app:showAsAction="always"
-        tools:ignore="AlwaysShowAction" />
+        tools:ignore="AlwaysShowAction">
+
+        <menu>
+
+            <item
+                android:id="@+id/menu_select_all"
+                android:title="@string/select_all"
+                app:showAsAction="never" />
+
+            <item
+                android:id="@+id/menu_revert_selection"
+                android:title="@string/revert_selection"
+                app:showAsAction="never" />
+
+            <item
+                android:id="@+id/menu_enable_selection"
+                android:title="@string/enable_selection"
+                app:showAsAction="never" />
+
+            <item
+                android:id="@+id/menu_disable_selection"
+                android:title="@string/disable_selection"
+                app:showAsAction="never" />
+
+            <item
+                android:id="@+id/menu_del_selection"
+                android:title="@string/del_select"
+                app:showAsAction="never" />
+
+        </menu>
+
+    </item>
 
     <item
         android:id="@+id/menu_group"
@@ -81,18 +112,6 @@
         android:id="@+id/menu_import_book_source_qr"
         android:icon="@drawable/ic_import"
         android:title="@string/import_by_qr_code"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/menu_revert_selection"
-        android:icon="@drawable/ic_swap_outline_24dp"
-        android:title="@string/revert_selection"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/menu_del_select"
-        android:icon="@drawable/ic_clear_all"
-        android:title="@string/del_select"
         app:showAsAction="never" />
 
     <item
