--- a/app/src/main/res/layout/item_replace_rule.xml
+++ b/app/src/main/res/layout/item_replace_rule.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <androidx.appcompat.widget.AppCompatCheckBox
+    <io.legado.app.lib.theme.view.ATECheckBox
         android:id="@+id/cb_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
