--- a/app/src/main/res/menu/main_bookshelf.xml
+++ b/app/src/main/res/menu/main_bookshelf.xml
@@ -27,7 +27,7 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_list_grid"
+        android:id="@+id/menu_bookshelf_layout"
         android:icon="@drawable/ic_view_quilt"
         android:title="@string/bookshelf_layout"
         app:showAsAction="never" />
