--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,12 +23,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title_bar">
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
+        <io.legado.app.ui.widget.anima.RefreshProgressBar
+            android:id="@+id/refresh_progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
 
     </io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout>
 
