--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,22 +16,23 @@
             app:layout_constraintTop_toTopOf="parent"
             app:title="搜索"/>
 
+    <io.legado.app.ui.widget.anima.RefreshProgressBar
+        android:id="@+id/refresh_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        app:layout_constraintTop_toBottomOf="@id/title_bar" />
+
     <io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout
             android:id="@+id/content_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_bar">
+        app:layout_constraintTop_toBottomOf="@id/refresh_progress_bar">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-
-        <io.legado.app.ui.widget.anima.RefreshProgressBar
-            android:id="@+id/refresh_progress_bar"
-            android:layout_width="match_parent"
-            android:layout_height="2dp" />
 
     </io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout>
 
