--- a/app/src/main/res/drawable/ic_divider.xml
+++ b/app/src/main/res/drawable/ic_divider.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:height="0.5dp" />
+    <size android:height="1px" />
     <solid android:color="@color/divider" />
 </shape>
