--- a/app/src/main/res/layout/view_read_menu.xml
+++ b/app/src/main/res/layout/view_read_menu.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:singleLine="true"
             android:text="@string/chapter"
             android:textSize="12sp"
             android:visibility="gone" />
@@ -36,6 +37,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:singleLine="true"
             android:text="@string/chapter"
             android:textSize="12sp"
             android:visibility="gone" />
