--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -2,32 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <io.legado.app.ui.widget.TitleBar
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/book_info"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/book_info" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/iv_cover_s"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_bar"
-        app:cardCornerRadius="5.0dp"
-        android:layout_margin="12dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        app:cardCornerRadius="5.0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_bar">
 
         <io.legado.app.ui.widget.image.CoverImageView
             android:id="@+id/iv_cover"
             android:layout_width="76dp"
             android:layout_height="110dp"
-            android:src="@drawable/img_cover_default"
-            />
+            android:src="@drawable/img_cover_default" />
 
     </androidx.cardview.widget.CardView>
 
@@ -37,19 +36,19 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="6dp"
-        android:orientation="vertical"
         android:minHeight="115dp"
+        android:orientation="vertical"
         android:paddingBottom="8dp"
-        app:layout_constraintTop_toTopOf="@+id/iv_cover_s"
         app:layout_constraintLeft_toRightOf="@+id/iv_cover_s"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_cover_s">
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:singleLine="true"
             android:layout_marginBottom="12dp"
+            android:singleLine="true"
             android:textColor="@color/tv_text_default"
             android:textSize="18sp" />
 
@@ -58,8 +57,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:textSize="14sp"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,10 +70,10 @@
                 android:id="@+id/tv_origin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
                 android:layout_weight="1"
                 android:singleLine="true"
                 android:textSize="14sp"
-                android:layout_marginRight="8dp"
                 tools:ignore="NestedWeights" />
 
             <io.legado.app.lib.theme.view.ATEAccentBgTextView
@@ -92,8 +91,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:visibility="gone"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <io.legado.app.lib.theme.view.ATEAccentBgTextView
                 android:id="@+id/tv_kind"
@@ -137,18 +136,18 @@
             android:layout_marginBottom="4dp"
             android:singleLine="true"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
             app:layout_constraintLeft_toLeftOf="@+id/tv_name"
-            app:layout_constraintRight_toRightOf="@id/tv_name"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_cover" />
+            app:layout_constraintRight_toRightOf="@id/tv_name" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/view_info"
-        app:layout_constraintTop_toBottomOf="@+id/ll_book_info"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/ll_book_info">
 
         <View
             android:layout_width="match_parent"
@@ -157,12 +156,12 @@
             android:background="@color/bg_divider_line" />
 
         <TextView
-            android:textSize="16sp"
-            android:textColor="@color/tv_text_default"
-            android:text="简介"
-            android:padding="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="简介"
+            android:textColor="@color/tv_text_default"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_intro"
@@ -170,8 +169,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:minHeight="100dp"
             android:maxHeight="160dp"
+            android:minHeight="100dp"
             android:scrollbars="vertical"
             android:textIsSelectable="true"
             android:textSize="12sp" />
@@ -180,10 +179,10 @@
 
     <LinearLayout
         android:id="@+id/view_chapter"
-        app:layout_constraintTop_toBottomOf="@+id/view_info"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/view_info">
 
         <View
             android:layout_width="match_parent"
@@ -192,19 +191,19 @@
             android:background="@color/bg_divider_line" />
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
-                android:textSize="16sp"
-                android:textColor="@color/tv_text_default"
-                android:text="目录"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                android:layout_weight="1.0"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:paddingLeft="8dp"
+                android:paddingTop="8dp"
+                android:text="目录"
+                android:textColor="@color/tv_text_default"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -212,11 +211,11 @@
             android:id="@+id/ll_chapter_base_info"
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:elevation="5dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             app:layout_constraintTop_toBottomOf="@+id/view_chapter">
 
             <TextView
@@ -231,10 +230,10 @@
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:ellipsize="middle"
+                android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:singleLine="true"
-                android:gravity="center_vertical"
                 android:textColor="@color/tv_text_default"
                 android:textSize="14sp" />
 
@@ -257,8 +256,8 @@
         android:id="@+id/rv_chapter_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/view_chapter"
-        app:layout_constraintBottom_toTopOf="@id/fl_action" />
+        app:layout_constraintBottom_toTopOf="@id/fl_action"
+        app:layout_constraintTop_toBottomOf="@+id/view_chapter" />
 
     <FrameLayout
         android:id="@+id/fl_action"
@@ -314,9 +313,9 @@
         </LinearLayout>
 
         <View
-            android:background="@color/bg_divider_line"
             android:layout_width="match_parent"
-            android:layout_height="1px" />
+            android:layout_height="1px"
+            android:background="@color/bg_divider_line" />
 
     </FrameLayout>
 
