--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -74,7 +74,8 @@
                 android:layout_marginStart="8dp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:text="@string/change_origin" />
+                android:text="@string/change_origin"
+                app:abt_radius="2dp" />
 
         </LinearLayout>
 
@@ -95,7 +96,8 @@
                 android:paddingRight="3dp"
                 android:singleLine="true"
                 android:text="@string/app_name"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                app:abt_radius="2dp" />
 
             <io.legado.app.lib.theme.view.ATEAccentBgTextView
                 android:id="@+id/tv_kind_1"
@@ -105,7 +107,8 @@
                 android:paddingRight="3dp"
                 android:singleLine="true"
                 android:text="@string/app_name"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                app:abt_radius="2dp" />
 
             <io.legado.app.lib.theme.view.ATEAccentBgTextView
                 android:id="@+id/tv_kind_2"
@@ -116,7 +119,8 @@
                 android:paddingRight="3dp"
                 android:singleLine="true"
                 android:text="@string/app_name"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                app:abt_radius="2dp" />
 
         </LinearLayout>
 
@@ -218,7 +222,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:background="?android:attr/selectableItemBackground"
                 android:ellipsize="middle"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
@@ -286,7 +290,7 @@
                 android:textColor="@color/tv_text_default"
                 android:textSize="15sp" />
 
-            <TextView
+            <io.legado.app.lib.theme.view.ATEAccentBgTextView
                 android:id="@+id/tv_read"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
